samples/_failures_safe/1761093412_28df6f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_048501d3.c: In function ‘main’:
./samples/SAFE/__tmp_048501d3.c:135:12: error: missing terminating " character
  135 |     printf("Matrix Operations Program
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_048501d3.c:135:5: error: expected expression at end of input
  135 |     printf("Matrix Operations Program
      |     ^~~~~~
./samples/SAFE/__tmp_048501d3.c:135:5: error: expected declaration or statement at end of input
